@@ -59,8 +59,27 @@ https://www.zyops.com/java-tomcat/
     redirectPort="8443" />          #指定服务器正在处理http请求时收到了一个SSL传输请求后重定向的端口号
 ```  
 
+5、设置Tomcat内存限制  
+```
+JAVA_OPTS="-Djava.awt.headless=true -Dfile.encoding=UTF-8 -server -Xms1024m -Xmx1024m -XX:NewSize=512m -XX:MaxNewSize=512m -XX:PermSize=512m -XX:MaxPermSize=512m"
 
-5、Tomcat获取用户IP地址  
+server:一定要作为第一个参数，在多个CPU时性能佳
+-Xms：初始堆内存Heap大小，使用的最小内存,cpu性能高时此值应设的大一些
+-Xmx：初始堆内存heap最大值，使用的最大内存
+上面两个值是分配JVM的最小和最大内存，取决于硬件物理内存的大小，建议均设为物理内存的一半。
+-XX:PermSize:设定内存的永久保存区域
+-XX:MaxPermSize:设定最大内存的永久保存区域
+-XX:MaxNewSize:
+-Xss 15120 这使得JBoss每增加一个线程（thread)就会立即消耗15M内存，而最佳值应该是128K,默认值好像是512k.
++XX:AggressiveHeap 会使得 Xms没有意义。这个参数让jvm忽略Xmx参数,疯狂地吃完一个G物理内存,再吃尽一个G的swap。
+-Xss：每个线程的Stack大小
+-verbose:gc 现实垃圾收集信息
+-Xloggc:gc.log 指定垃圾收集日志文件
+-Xmn：young generation的heap大小，一般设置为Xmx的3、4分之一
+-XX:+UseParNewGC ：缩短minor收集的时间
+-XX:+UseConcMarkSweepGC ：缩短major收集的时间
+```  
+6、Tomcat获取用户IP地址  
 ```
 className="org.apache.catalina.valves.AccessLogValve" directory="logs"
     prefix="localhost_access_log" suffix=".txt"
@@ -75,7 +94,7 @@ className="org.apache.catalina.valves.AccessLogValve" directory="logs"
 ```  
 
 
-6、tomcat启动停止脚本  
+7、tomcat启动停止脚本  
 ```
 #!/bin/bash
 # chkconfig: 2345 74 44
